--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,12 +13,14 @@ body {
   width: 100%;
   background: c.$pri_white;
   padding: 30px 0;
+  z-index: 10;
 }
 
 .header {
   @include c.flex;
   align-items: flex-start;
   width: 80%;
+  max-width: 1400px;
   margin-inline: auto;
 
   & .logo {
@@ -72,15 +74,16 @@ body {
 .hero {
   position: relative;
   width: 80%;
+  max-width: 1400px;
   margin-inline: auto;
-  padding: 100px 50px;
+  padding: 30px 50px;
   @include c.flex;
   background: c.$pri_peach;
-  border-radius: 8px;
+  border-radius: 12px;
   overflow: hidden;
 
   &-contents {
-    width: 540px;
+    margin-right: 80px;
     color: c.$pri_white;
 
     & .hero-header {
@@ -92,8 +95,8 @@ body {
     & .hero-copy {
       font-size: map-get(c.$font-sizes, body);
       font-weight: c.$font-weight_regular;
-      width: 445px;
       margin: 30px 0;
+      //   width: 445px;
     }
 
     & .hero-btn {
@@ -104,15 +107,93 @@ body {
     }
   }
 
-  &-img {
-    width: 620px;
+  &-oval {
     position: absolute;
-    right: -100px;
-    top: -100px;
+    right: 0;
+    top: 0;
+    width: 500px;
 
     & img {
-      //   width: 100%;
-      //   transform: translateX(100px);
+      width: 100%;
+    }
+  }
+
+  &-img {
+    position: relative;
+    width: 620px;
+    transform: translateY(20%);
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-shadow: 20px 20px 50px c.$pri_peach, -0px -20px 50px c.$pri_peach;
+      z-index: 2;
+    }
+    // box-shadow: 1px 1px 20px black;
+
+    & img {
+      position: relative;
+      width: 100%;
+      z-index: 3;
+    }
+  }
+}
+
+#services-container {
+  margin-top: 50px;
+}
+
+.services {
+  width: 80%;
+  max-width: 1400px;
+  margin-inline: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-template-areas:
+    'web app'
+    'web graphic';
+  grid-gap: 20px;
+
+  & .service {
+    position: relative;
+    height: 640px;
+    background-image: url('../../assets/home/desktop/image-web-design-large.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 12px;
+    overflow: hidden;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      opacity: 0.5;
+      z-index: 2;
+    }
+
+    &.web {
+      grid-area: web;
+    }
+
+    &.app {
+      height: 308px;
+      background-image: url('../../assets/home/desktop/image-app-design.jpg');
+      grid-area: app;
+    }
+
+    &.graphic {
+      height: 308px;
+      background-image: url('../../assets/home/desktop/image-graphic-design.jpg');
+      grid-area: graphic;
     }
   }
 }
