--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -26,10 +26,13 @@ $font-sizes: (
 
 $font-weight_regular: 400;
 $font-weight_medium: 500;
+$font-weight_bold: 600;
 
 $pri_peach: #e7816b;
 $pri_black: #1d1c1e;
 $pri_white: #ffffff;
+
+$footer-border: #979797;
 
 $sec_light-peach: #ffad9b;
 $sec_dark-grey: #333136;
