--- a/src/scss/_main-responsive.scss
+++ b/src/scss/_main-responsive.scss
@@ -82,20 +82,21 @@
     flex-direction: column;
 
     & .value {
-      @include c.flex;
-      text-align: center;
-
-      &-content {
-        text-align: left;
-        margin-left: 40px;
-      }
+      flex-direction: row;
 
       &:not(:last-child) {
         margin-right: 0px;
+        margin-bottom: 50px;
       }
 
-      &-heading {
-        margin-bottom: 10px;
+      &-content {
+        width: 70%;
+        text-align: left;
+        margin-left: 30px;
+
+        & .value-heading {
+          margin-bottom: 10px;
+        }
       }
     }
   }
@@ -134,5 +135,9 @@
         margin-right: 30px;
       }
     }
+  }
+
+  .bg-pattern {
+    display: none;
   }
 }
