--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,9 @@
 body {
   font-family: c.$font-family;
   background: c.$pri_white;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 #hero-container {
@@ -20,6 +23,7 @@ body {
   background: c.$pri_peach;
   border-radius: 12px;
   overflow: hidden;
+  z-index: 3;
 
   &-contents {
     position: relative;
@@ -84,7 +88,9 @@ body {
 }
 
 #services-container {
+  position: relative;
   margin-top: 120px;
+  z-index: 3;
 }
 
 .services {
@@ -194,7 +200,9 @@ body {
 }
 
 #values-container {
+  position: relative;
   margin-top: 120px;
+  z-index: 3;
 }
 
 .values {
@@ -204,20 +212,61 @@ body {
   margin-inline: auto;
 
   & .value {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
 
     &:not(:last-child) {
       margin-right: 20px;
     }
 
-    &-heading {
-      font-size: map-get(c.$font-sizes, h3);
-      font-weight: c.$font-weight_medium;
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      margin-bottom: 20px;
+    &-img {
+      position: relative;
+      width: 202px;
+
+      & .value-pattern {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 3;
+        width: 100%;
+
+        &.pattern-2 {
+          transform: rotate(-90deg);
+        }
+
+        &.pattern-3 {
+          transform: rotate(80deg);
+        }
+      }
+
+      & img {
+        position: relative;
+        z-index: 4;
+        width: 100%;
+      }
+    }
+
+    &-content {
+      width: 85%;
+
+      & .value-heading {
+        font-size: map-get(c.$font-sizes, h3);
+        font-weight: c.$font-weight_medium;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+        margin-bottom: 20px;
+      }
     }
   }
+}
+
+.bg-pattern.pattern-2 {
+  position: absolute;
+  bottom: -90%;
+  right: -20%;
+  z-index: 1;
 }
 
 @import 'main-responsive';
