--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -33,6 +33,7 @@ $pri_black: #1d1c1e;
 $pri_white: #ffffff;
 
 $footer-border: #979797;
+$core-bg: #fdf3f0;
 
 $sec_light-peach: #ffad9b;
 $sec_dark-grey: #333136;
