--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,13 +4,13 @@
 body {
   font-family: c.$font-family;
   background: c.$pri_white;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   overflow-x: hidden;
 }
 
 #hero-container {
-  margin-top: 92px;
+  margin-top: 110px;
 }
 
 .hero {
