--- a/src/scss/_others-responsive.scss
+++ b/src/scss/_others-responsive.scss
@@ -30,6 +30,10 @@
     grid-template-rows: repeat(4, 1fr);
     grid-row-gap: 30px;
     grid-column-gap: 0px;
+
+    &.graphic {
+      grid-template-rows: repeat(3, 1fr);
+    }
   }
 
   .core {
