--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -118,3 +118,108 @@ body {
     }
   }
 }
+
+#locations-choice-container {
+  margin-top: 120px;
+}
+
+.locations-choice {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  z-index: 3;
+}
+
+.location-choice {
+  text-align: center;
+
+  &-content {
+    & .location-name {
+      text-transform: uppercase;
+      font-weight: map-get(c.$font-sizes, H2);
+      letter-spacing: 5px;
+      margin-bottom: 20px;
+    }
+
+    & a {
+      @include c.button_on_light;
+    }
+  }
+}
+
+#deal-container {
+  margin-top: 120px;
+}
+
+.deal {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  background: c.$core-bg;
+  padding-left: 50px;
+  border-radius: 12px;
+  z-index: 3;
+  overflow: hidden;
+
+  &-contents {
+    position: relative;
+    color: c.$pri_black;
+    width: 80%;
+    margin-right: 80px;
+    z-index: 3;
+
+    & .deal-header {
+      font-size: map-get(c.$font-sizes, H2);
+      margin-bottom: 20px;
+      color: c.$pri_peach;
+    }
+
+    & .deal-copy {
+      & span {
+        display: block;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  &-img {
+    position: relative;
+    width: 80%;
+    height: 640px;
+    background-image: url('../../assets/about/desktop/image-real-deal.jpg');
+    background-position: center;
+    background-size: cover;
+    z-index: 3;
+  }
+
+  &-pattern {
+    position: absolute;
+    right: 10%;
+    bottom: -3%;
+    width: 60%;
+    z-index: 2;
+
+    & img {
+      width: 100%;
+    }
+  }
+}
+
+.bg-pattern {
+  position: absolute;
+}
+
+.bg-pattern.pattern-1 {
+  top: 20%;
+}
+
+.bg-pattern.pattern-2 {
+  bottom: -70%;
+  right: -30%;
+}
