--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -17,7 +17,7 @@ body {
   margin-inline: auto;
   @include c.flex;
   background: c.$pri_peach;
-  padding: 30px 50px;
+  padding: 50px 50px;
   border-radius: 12px;
   z-index: 3;
   overflow: hidden;
@@ -57,35 +57,50 @@ body {
       @include c.flex;
       flex-direction: column;
 
-      & div {
+      & .form-group {
+        position: relative;
         width: 100%;
 
         &:not(:last-child) {
           margin-bottom: 30px;
         }
-      }
 
-      & label {
-        display: block;
-        color: c.$pri_white;
-        font-weight: c.$font-weight_regular;
-        font-size: 15px;
-        padding-left: 20px;
-        transform: translateY(50%);
-      }
+        & label {
+          display: block;
+          color: c.$pri_white;
+          font-weight: c.$font-weight_regular;
+          font-size: 15px;
+          padding-left: 20px;
+          transform: translateY(50%);
+        }
 
-      & input,
-      & textarea {
-        width: 100%;
-        border: none;
-        background: transparent;
-        border-bottom: 1px solid c.$pri_white;
-        color: c.$pri_white;
-        font-size: 15px;
-        padding-bottom: 5px;
+        & input,
+        & textarea {
+          width: 100%;
+          border: none;
+          background: transparent;
+          border-bottom: 1px solid c.$pri_white;
+          color: c.$pri_white;
+          letter-spacing: 1.1px;
+          font-size: 15px;
+          padding-bottom: 5px;
 
-        &:focus {
-          outline: none;
+          &:focus {
+            outline: none;
+          }
+        }
+
+        & .error {
+          @include c.flex;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: 0;
+          color: c.$pri_white;
+
+          & img {
+            margin-left: 8px;
+          }
         }
       }
 
@@ -116,7 +131,33 @@ body {
 }
 
 .location-choice {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+
+  &-img {
+    position: relative;
+    width: 202px;
+    margin-bottom: 40px;
+
+    & .location-pattern {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 3;
+      width: 100%;
+
+      &.pattern-1 {
+        transform: rotate(90deg);
+      }
+
+      &.pattern-3 {
+        transform: rotate(-90deg);
+      }
+    }
+  }
 
   &-content {
     & .location-name {
@@ -140,3 +181,6 @@ body {
   bottom: 5%;
   right: -30%;
 }
+
+@import 'main-responsive';
+@import 'contact-responsive';
