--- a/src/scss/_main-responsive.scss
+++ b/src/scss/_main-responsive.scss
@@ -141,3 +141,70 @@
     display: none;
   }
 }
+
+@media (max-width: 600px) {
+  .header {
+    & .links {
+      position: absolute;
+      top: 93px;
+      left: 0;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      width: 100%;
+      z-index: 5;
+
+      &:after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: c.$pri_black;
+        opacity: 0.5;
+        z-index: 4;
+      }
+
+      & .link {
+        position: relative;
+        background: c.$pri_black;
+        width: 100%;
+        padding: 20px 0;
+        padding-left: 30px;
+        z-index: 5;
+
+        &:first-child {
+          padding-top: 50px;
+        }
+        &:last-child {
+          padding-bottom: 50px;
+        }
+
+        &:not(:last-child) {
+          margin-right: 0px;
+          margin-bottom: 0px;
+        }
+
+        & a {
+          font-size: 25px;
+          color: c.$pri_white;
+
+          &:hover {
+            &:after {
+              width: 0;
+            }
+          }
+        }
+      }
+    }
+
+    & .menu-icon {
+      display: block;
+      & i {
+        font-size: 30px;
+        cursor: pointer;
+      }
+    }
+  }
+}
