--- a/src/scss/_shared.scss
+++ b/src/scss/_shared.scss
@@ -14,6 +14,7 @@ body {
   background: c.$pri_white;
   padding: 30px 0;
   z-index: 10;
+  border-bottom: 2px solid red;
 }
 
 .header {
@@ -63,6 +64,14 @@ body {
           }
         }
       }
+    }
+  }
+
+  & .menu-icon {
+    display: none;
+    & i {
+      font-size: 30px;
+      cursor: pointer;
     }
   }
 }
