--- a/src/scss/_main-responsive.scss
+++ b/src/scss/_main-responsive.scss
@@ -152,7 +152,9 @@
       align-items: flex-start;
       justify-content: flex-start;
       width: 100%;
+      transform: translateX(100%);
       z-index: 5;
+      @include c.transition;
 
       &:after {
         position: absolute;
@@ -164,15 +166,30 @@
         background: c.$pri_black;
         opacity: 0.5;
         z-index: 4;
+        display: none;
+      }
+
+      &.open {
+        transform: translateX(0);
+        &:after {
+          display: block;
+        }
       }
 
       & .link {
-        position: relative;
         background: c.$pri_black;
         width: 100%;
         padding: 20px 0;
         padding-left: 30px;
         z-index: 5;
+        transform: translateX(100%);
+
+        @include c.transition;
+        z-index: 5;
+
+        &.open {
+          transform: translateX(0);
+        }
 
         &:first-child {
           padding-top: 50px;
@@ -183,7 +200,7 @@
 
         &:not(:last-child) {
           margin-right: 0px;
-          margin-bottom: 0px;
+          margin-bottom: -10px;
         }
 
         & a {
@@ -201,10 +218,226 @@
 
     & .menu-icon {
       display: block;
+
       & i {
         font-size: 30px;
         cursor: pointer;
+
+        &.fa-times {
+          display: none;
+        }
+      }
+
+      &.open {
+        & .fa-bars {
+          display: none;
+        }
+        & .fa-times {
+          display: block;
+        }
       }
     }
+  }
+
+  #hero-container {
+    margin-top: 92px;
+    width: 100%;
+  }
+
+  .hero {
+    width: 100%;
+    border-radius: 0px;
+    height: 1100px;
+    padding-top: 120px;
+    z-index: 6;
+
+    &-contents {
+      margin-right: 0px;
+      text-align: center;
+      width: 90%;
+      margin-bottom: 50px;
+
+      & .hero-header {
+        font-size: 32px;
+      }
+
+      & .hero-copy {
+        font-size: 15px;
+        width: 100%;
+        margin-inline: auto;
+      }
+
+      & .hero-btn {
+        position: relative;
+        display: block;
+        z-index: 6;
+      }
+    }
+
+    &-oval {
+      right: 0px;
+      top: 45px;
+    }
+
+    &-img {
+      width: 300px;
+      transform: translateY(5%);
+    }
+  }
+
+  .services {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      'web'
+      'app'
+      'graphic';
+    grid-gap: 20px;
+
+    & .service {
+      height: 200px;
+      &:hover {
+        &:after {
+        }
+      }
+
+      &.web {
+        background-image: url('../../assets/home/desktop/web-design-small.png');
+
+        &:after {
+          left: 0;
+          width: 0%;
+          height: 100%;
+        }
+
+        &:hover {
+          &:after {
+            width: 100%;
+          }
+        }
+      }
+
+      &.app {
+        height: 200px;
+      }
+
+      &.graphic {
+        height: 200px;
+      }
+
+      & .content {
+        & .service-type {
+          font-size: 28px;
+          margin-bottom: 10px;
+        }
+
+        & .link {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+
+  .values {
+    & .value {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &:not(:last-child) {
+        margin-right: 0px;
+        margin-bottom: 50px;
+      }
+
+      &-content {
+        width: 100%;
+        text-align: center;
+        margin-left: 0px;
+        margin-top: 40px;
+
+        & .value-heading {
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+
+  .cta {
+    padding: 70px 40px;
+
+    &-content {
+      width: 100%;
+
+      &-header {
+        font-size: 32px;
+      }
+    }
+  }
+
+  .footer-top {
+    @include c.flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-bottom: none;
+    padding-bottom: 30px;
+
+    &-logo {
+      width: 157px;
+
+      & img {
+        width: 100%;
+      }
+    }
+
+    &-links-container {
+      border-top: 1px solid c.$footer-border;
+      width: 100%;
+      margin-top: 20px;
+      padding-top: 20px;
+    }
+
+    &-links-container .links {
+      @include c.flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      & .link {
+        &:not(:last-child) {
+          margin-right: 0px;
+          margin-bottom: 30px;
+        }
+      }
+    }
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &-content {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      & .address {
+        margin-right: 0px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+
+      & .contact {
+        text-align: center;
+      }
+    }
+  }
+
+  .footer-bottom-socials {
+    margin-top: 40px;
+  }
+
+  .bg-pattern {
+    display: none;
   }
 }
