--- a/src/scss/_others.scss
+++ b/src/scss/_others.scss
@@ -1,13 +1,13 @@
 @use 'config' as c;
 @import 'shared';
 
-body {
-  font-family: c.$font-family;
-  background: c.$pri_white;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-}
+// body {
+//   font-family: c.$font-family;
+//   background: c.$pri_white;
+//   width: 100%;
+//   height: 100%;
+//   overflow-x: hidden;
+// }
 
 #hero-container {
   position: relative;
