--- a/src/scss/_shared.scss
+++ b/src/scss/_shared.scss
@@ -4,6 +4,7 @@ body {
   font-family: c.$font-family;
   background: c.$pri_white;
   overflow-x: hidden;
+  min-width: 100%;
 }
 
 #header-container {
@@ -11,6 +12,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  height: 94.5px;
   background: c.$pri_white;
   padding: 30px 0;
   z-index: 10;
@@ -139,6 +141,7 @@ footer {
   color: c.$pri_white;
   padding: 130px 0px 40px;
   z-index: 3;
+  width: 100vw;
 }
 
 .footer {
