--- a/src/scss/_about-responsive.scss
+++ b/src/scss/_about-responsive.scss
@@ -53,7 +53,7 @@
 
     &-content {
       & .location-name {
-        font-weight: map-get(c.$font-sizes, H2);
+        font-size: map-get(c.$font-sizes, H2);
       }
     }
   }
@@ -225,6 +225,117 @@
         & .fa-times {
           display: block;
         }
+      }
+    }
+  }
+
+  #about-hero-container {
+    margin-top: 94.5px;
+  }
+  .about-hero {
+    width: 100%;
+    padding-bottom: 70px;
+    border-radius: 0;
+
+    &-oval {
+      left: 20%;
+      top: 20%;
+      width: 80%;
+      transform: rotate(90deg);
+    }
+
+    &-contents {
+      width: 90%;
+
+      & .about-hero-header {
+        font-size: 32px;
+      }
+
+      & .about-hero-copy {
+        font-size: 15px;
+      }
+    }
+
+    &-img {
+      width: 100%;
+      height: 320px;
+      background-image: url('../../assets/about/mobile/image-about-hero.jpg');
+    }
+  }
+
+  #talent-container {
+    margin-top: 0px;
+  }
+
+  .talent {
+    width: 100%;
+    border-radius: 0;
+
+    &-img {
+      width: 100%;
+      height: 320px;
+      background-image: url('../../assets/about/mobile/image-world-class-talent.jpg');
+    }
+
+    &-contents {
+      width: 90%;
+
+      & .talent-header {
+        font-size: 32px;
+      }
+
+      & .talent-copy {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .location-choice {
+    &:not(:last-child) {
+      margin-bottom: 70px;
+    }
+
+    &-content {
+      & .location-name {
+        font-size: 20px;
+      }
+    }
+  }
+
+  .deal {
+    width: 100%;
+    border-radius: 0;
+
+    &-contents {
+      margin-top: 50px;
+      margin-right: 0px;
+      text-align: center;
+      width: 90%;
+
+      & .deal-header {
+        font-size: 32px;
+      }
+
+      & .deal-copy {
+        font-size: 15px;
+      }
+    }
+
+    &-img {
+      width: 100%;
+      height: 320px;
+      background-image: url('../../assets/about/mobile/image-real-deal.jpg');
+    }
+
+    &-pattern {
+      position: absolute;
+      right: 10%;
+      bottom: -3%;
+      width: 60%;
+      z-index: 2;
+
+      & img {
+        width: 100%;
       }
     }
   }
