--- a/src/scss/_shared.scss
+++ b/src/scss/_shared.scss
@@ -16,7 +16,7 @@ body {
   background: c.$pri_white;
   padding: 30px 0;
   z-index: 10;
-  border-bottom: 2px solid red;
+  border-bottom: 1px solid c.$pri_black;
 }
 
 .header {
