--- a/src/scss/_main-responsive.scss
+++ b/src/scss/_main-responsive.scss
@@ -329,6 +329,10 @@
 
         & .link {
           font-size: 15px;
+
+          & i {
+            font-size: 18px;
+          }
         }
       }
     }
