--- a/src/scss/_others-responsive.scss
+++ b/src/scss/_others-responsive.scss
@@ -328,6 +328,21 @@
           display: none;
         }
       }
+
+      & .content {
+        & .service-type {
+          font-size: 28px;
+          margin-bottom: 10px;
+        }
+
+        & .link {
+          font-size: 15px;
+
+          & i {
+            font-size: 18px;
+          }
+        }
+      }
     }
   }
 
